--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -5,7 +5,7 @@
 
   --secondary-light-color: ##4477ad;
   --secondary-color: #29639f;
-  --secondary-dark-color: #f50c99;
+  --secondary-dark-color: #124d8a;
 
   --dark-light-color: #464545;
   --dark-color: #100f0f;
