Ajuste no Css de Extensão e Atividades

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -3,7 +3,7 @@
   --primary-color: #fffd44;
   --primary-dark-color: #f6f312;
 
-  --secondary-light-color: ##4477ad;
+  --secondary-light-color: #4477ad;
   --secondary-color: #29639f;
   --secondary-dark-color: #124d8a;
 
